--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no" />
-    <link rel="shortcut icon" href="favicon.ico"/>
+    <link rel="icon" href="favicon.ico" type="x-icon" />
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="css/flaticon.css" rel="stylesheet" type="text/css" />
     <link href="css/magnific-popup.css" rel="stylesheet" type="text/css"/>
@@ -14,7 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
     <link href="css/styles.css" rel="stylesheet" type="text/css"/>
-    <title>Barcelona</title>
+    <title>CM | Gym</title>
   </head>
 <body>
 
@@ -37,7 +37,7 @@
           <div class="logo">
              <a href="index.html" class="table-cell">
                 <img src="img/logo-cm-h.png" alt="NRG" class="hlogo-white hidden-mobile">
-                <img src="img/logo-cm.png" alt="NRG" class="img-scrll hlogo-black hidden-mobile">
+                <img src="img/logo-cm-h.png" alt="NRG" class="img-scrll hlogo-black hidden-mobile">
                 <img src="img/small-logo.png" alt="logo" class="small-logo">
              </a>
           </div>
@@ -57,10 +57,9 @@
                 </ul>
             </nav>
             <div class="header-folow folow-style-2">
-                <a href="#" class="serch-button"><span class="fa fa-search"></span></a>
+         <!--        <a href="#" class="serch-button"><span class="fa fa-search"></span></a> -->
                 <a href="#"><span class="fa fa-facebook"></span></a>
                 <a href="#"><span class="fa fa-twitter"></span></a>
-                <a href="#"><span class="fa fa-google-plus"></span></a>
             </div>
           </div>
         </header>
@@ -177,7 +176,7 @@
         <div class="row service-first-row">
             <div class="col-xs-12 col-sm-4">
                 <div class="service-block type-1 font-3">
-                    <img src="img/service_icon_1_h.png" alt="" class="image">
+                    <img src="img/home/heart-icon.png" alt="" class="image">
                     <div class="desc">
                         <h4 class="title">Functional Trainings</h4>
                         <p class="text">Modo de entrenamiento más completo y funcional que las clases tradicionales.</p>
@@ -186,7 +185,7 @@
             </div>
             <div class="col-xs-12 col-sm-4">
                 <div class="service-block type-1 font-3">
-                    <img src="img/service_icon_2_h.png" alt="" class="image">
+                    <img src="img/home/weight-icon.png" alt="" class="image">
                     <div class="desc">
                         <h4 class="title">Cardio Trainings</h4>
                         <p class="text">Con este plan de entrenamiento, solo necesitas un cuarto de hora al día. Lo único que tendrás que hacer es ser constante, ya que tendrás que repetirlo cinco días a la semana.</p>
@@ -195,7 +194,7 @@
             </div>
             <div class="col-xs-12 col-sm-4">
                 <div class="service-block type-1 font-3">
-                    <img src="img/service_icon_3_h.png" alt="" class="image">
+                    <img src="img/home/muscle-icon.png" alt="" class="image">
                     <div class="desc">
                         <h4 class="title">Musculation</h4>
                         <p class="text">Para incrementa el volumen de tus músculos.</p>
@@ -204,34 +203,6 @@
             </div>
         </div>
 
-        <div class="row service-second-row">
-            <div class="col-xs-12 col-sm-4">
-                <div class="service-block type-1 font-3">
-                    <img src="img/service_icon_4_h.png" alt="" class="image">
-                    <div class="desc">
-                        <h4 class="title">Personal Trainings</h4>
-                        <p class="text">Diseñamos programas para tus necesidades específicas.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-                <div class="service-block type-1 font-3">
-                    <img src="img/service_icon_5_h.png" alt="" class="image">
-                    <div class="desc">
-                        <h4 class="title">Crossfit</h4>
-                        <p class="text">Sistema de acondicionamiento físico basado en ejercicios constantemente variados, con movimientos funcionales, ejecutados a alta intensidad</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-                <div class="service-block type-1 font-3">
-                    <img src="img/service_icon_6_h.png" alt="" class="image">
-                    <div class="desc">
-                        <h4 class="title">Sport Nutrition</h4>
-                        <p class="text">Combinamos rutina de ejercicio con programa alimenticio.</p>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -279,15 +250,15 @@
          <!--
         data-style="custom"
         -->
-        <div
+       <!--  <div
           class="wpc-map"
           data-lat="40.7143528"
           data-lng="-74.0059731"
-          data-marker="img/marker.png"
+          data-marker="images/marker.png"
           data-zoom="10"
           data-style="style-1"
           data-string="Marker"
-        ></div>
+        ></div> -->
         <div class="wrap-footer">
             <div class="container-fluid">
                 <div class="row">
@@ -301,7 +272,6 @@
                             <div class="wpc-soc-icons right">
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
                             </div>
                         </div>
                     </div>
@@ -336,14 +306,14 @@
                             <div class="info-group marg-lg-b40">
                                 <p class="title marg-lg-b20">
                                     <i class="fa fa-map-marker"></i>
-                                    Address
+                                    Dirección
                                 </p>
                                 <p class="subtitle">Dirección #1847, Delegación. C.P.</p>
                             </div>
                             <div class="info-group marg-lg-b40">
                                 <p class="title marg-lg-b20">
                                     <i class="fa fa-mobile-phone"></i>
-                                    telephones
+                                    Teléfono
                                 </p>
                                 <p class="subtitle">
                                     <a href="tel:+1234567890">+65 0052 300,</a>
